--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.6",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "faker": "^6.6.6",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
