--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@faker-js/faker": "^6.0.0-alpha.6",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "express": "^4.17.2",
     "faker": "^6.6.6",
     "next": "12.0.10",
+    "next-auth": "4.0.0-beta.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.7"
